--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/ycandau/tinyapp/issues"
   },
-  "homepage": "https://github.com/ycandau/tinyapp#readme"
+  "homepage": "https://github.com/ycandau/tinyapp#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "morgan": "^1.10.0"
+  }
 }
