Added dev dependency: nodemon

--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "tinyapp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "express_server.js",
   "scripts": {
+    "start": "./node_modules/.bin/nodemon -L express_server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ycandau/tinyapp.git"
+    "url": "https://github.com/ycandau/tinyapp.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Yves Candau",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ycandau/tinyapp/issues"
@@ -22,5 +23,8 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.9"
   }
 }
